# Automatic-Ticket-Classification

./: .replit  README.md  app.py  classifier.py  database.py  logisticregmodel.pkl  model.pkl  model.py  pyproject.toml  requirements.txt  student_data.xlsx  test.py  vectorizer.pickle
static/: style.css
templates/: all_tickets.html  bootstrap.html  create_new.html  credit_prepaid.html  footer.html  home.html  my_tickets.html  nav.html  predict.html  sidebar.html  submitted.html  support.html  support_complaint.html  support_navbar.html  support_sidebar.html
