[tool.poetry]
name = "staiml-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.3"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
openpyxl = "3.1.2"
SQLAlchemy = "^2.0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
